--- a/lib/views/layout.jade
+++ b/lib/views/layout.jade
@@ -7,6 +7,7 @@ html
     script(src='/js/app.js')
     script(src='/js/controllers.js')
     script(src='/js/services.js')
+    script(src='/js/directives.js')
     
     title= title
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Bitter:400,700,400italic')
