--- a/lib/views/patients/patientView.jade
+++ b/lib/views/patients/patientView.jade
@@ -75,78 +75,9 @@
 							P Please select which categories you wish to be informed about should a gene mutation exist.
 
 							form(role='form')
-								table.table
-									tr
-										th Coincidental variation category
-										th Your projected risk
-										th Your choice
-									tr
-										td
-											p
-												b Medically actionable disease causing variations
-											p  changes in genes known to cause diseases that are treatable (for example breast cancer).
-										td
-											| 2%
-										td
-											div.radio
-												label
-													input(type='radio', name='actionable_choice')
-													| Yes
-											div.radio
-												label
-													input(type='radio', name='actionable_choice')
-													| No
-									tr
-										td 
-											p
-												b Medically unactionable disease causing variations
-											p changes in genes known to cause diseases that are not yet treatable (for example Huntington's disease).
-										td
-											| Unknown
-										td
-											div.radio
-												label
-													input(type='radio', name='unactionable_choice')
-													| Yes
-											div.radio
-												label
-													input(type='radio', name='unactionable_choice')
-													| No
-
-									tr
-										td
-											p 
-												b Predisposition variations
-											p changes in genes known to increase the risk (never to 100%) of certain diseases (for example Alhzeimers)
-										td
-											| 5%
-										td
-											div.radio
-												label
-													input(type='radio', name='predisposition_choice')
-													| Yes
-											div.radio
-												label
-													input(type='radio', name='predisposition_choice')
-													| No
-									tr
-										td
-											p
-												b Reproductive variations (autosomal recessive carrier status)
-											p changes in genes known to increase the risk of disease in offspring when your partner also has a change in the same gene (for example Cystic Fibrosis).
-										td
-											| 20%
-										td
-											div.radio
-												label
-													input(type='radio', name='reproductive_choice')
-													| Yes
-											div.radio
-												label
-													input(type='radio', name='reproductive_choice')
-													| No
+								gk-consent-form(read-only='false')
 	.row
 		.col-lg-12
 			p(style='padding-top:10px')
-				a(href='/patients/print')
+				a(href='#/patientPrintView?id={{patient._id}}')
 					button.btn.btn-primary(type="button") Print Summary
